# GMS

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml  requirements.txt
templates/: adminDash.html  layout.html
templates/includes/: _navbar.html
