[tool.poetry]
name = "repl_nix_GMS"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
passlib = "^1.7.4"
SQLAlchemy = "^2.0.9"
WTForms = "^3.0.1"
Flask = "^2.2.3"
Flask-Script = "^2.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
